clusters/cl01tl/manifests/loki/Ingress-loki-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-tailscale
  namespace: loki
  labels:
    app.kubernetes.io/name: loki-tailscale
    app.kubernetes.io/instance: loki
    app.kubernetes.io/part-of: loki
    tailscale.com/proxy-class: default
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - loki-cl01tl
      secretName: loki-cl01tl
  rules:
    - host: loki-cl01tl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
